Adding GPU attributes.

--- a/Chap_API_Init.tex
+++ b/Chap_API_Init.tex
@@ -141,7 +141,9 @@ If provided, the following attributes are used by the event notification system 
 \pasteAttributeItem{PMIX_MODEL_NUM_THREADS}
 \pasteAttributeItem{PMIX_MODEL_NUM_CPUS}
 \pasteAttributeItem{PMIX_MODEL_CPU_TYPE}
+\pasteAttributeItem{PMIX_MODEL_GPU_TYPE}
 \pasteAttributeItem{PMIX_MODEL_AFFINITY_POLICY}
+\pasteAttributeItem{PMIX_MODEL_GPU_AFFINITY_POLICY}
 
 \optattrend
 
