--- a/Chap_API_Proc_Mgmt.tex
+++ b/Chap_API_Proc_Mgmt.tex
@@ -153,6 +153,9 @@ The following attributes are optional for host environments that support this op
 \pasteAttributeItem{PMIX_ALLOC_NUM_CPUS}
 \pasteAttributeItem{PMIX_ALLOC_NUM_CPU_LIST}
 \pasteAttributeItem{PMIX_ALLOC_CPU_LIST}
+\pasteAttributeItem{PMIX_ALLOC_NUM_GPUS}
+\pasteAttributeItem{PMIX_ALLOC_NUM_GPU_LIST}
+\pasteAttributeItem{PMIX_ALLOC_GPU_LIST}
 \pasteAttributeItem{PMIX_ALLOC_MEM_SIZE}
 \pasteAttributeItem{PMIX_ALLOC_BANDWIDTH}
 \pasteAttributeItem{PMIX_ALLOC_FABRIC_QOS}
