--- a/Chap_API_Server.tex
+++ b/Chap_API_Server.tex
@@ -3624,6 +3624,7 @@ Host environments that provide this module entry point are required to support t
 \pasteAttributeItem{PMIX_ALLOC_ID}
 \pasteAttributeItem{PMIX_ALLOC_NUM_NODES}
 \pasteAttributeItem{PMIX_ALLOC_NUM_CPUS}
+\pasteAttributeItem{PMIX_ALLOC_NUM_GPUS}
 \pasteAttributeItem{PMIX_ALLOC_TIME}
 
 \reqattrend
@@ -3634,6 +3635,8 @@ The following attributes are optional for host environments that support this op
 \pasteAttributeItem{PMIX_ALLOC_NODE_LIST}
 \pasteAttributeItem{PMIX_ALLOC_NUM_CPU_LIST}
 \pasteAttributeItem{PMIX_ALLOC_CPU_LIST}
+\pasteAttributeItem{PMIX_ALLOC_NUM_GPU_LIST}
+\pasteAttributeItem{PMIX_ALLOC_GPU_LIST}
 \pasteAttributeItem{PMIX_ALLOC_MEM_SIZE}
 \pasteAttributeItem{PMIX_ALLOC_FABRIC}
 \pasteAttributeItem{PMIX_ALLOC_FABRIC_ID}
